Partial AlgoRace improvements